@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'jacoco'
-    id 'org.graalvm.buildtools.native' version '0.10.4'
+    id 'org.graalvm.buildtools.native' version '0.11.3'
 }
 
 group = 'com.wilhg'
@@ -24,7 +24,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.withType(Test).configureEach {
-    jvmArgs += ['--enable-preview']
+    jvmArgs += ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
 }
 
 repositories {
@@ -38,15 +38,15 @@ dependencies {
     implementation 'tools.jackson.dataformat:jackson-dataformat-yaml:3.0.3'
 
     // GraalVM Polyglot & JS
-    implementation 'org.graalvm.polyglot:polyglot:25.0.0'
-    implementation 'org.graalvm.polyglot:js:25.0.0'
+    implementation 'org.graalvm.polyglot:polyglot:25.0.1'
+    implementation 'org.graalvm.polyglot:js:25.0.1'
 
     // Metrics
     implementation 'io.micrometer:micrometer-core:1.16.1'
     implementation 'io.micrometer:micrometer-registry-influx:1.16.1'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.16.1'
 
-    testImplementation platform('org.junit:junit-bom:5.11.4')
+    testImplementation platform('org.junit:junit-bom:5.14.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.testcontainers:testcontainers:2.0.3'
